# timestorage

./: CLAUDE.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  canister_ids.json  cli.cjs  dfx.json  file.sh  init.sh  mindmap.html  mock.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: build-canister.sh  integration-test.sh  unit-test.sh
src/app/: README.md
src/timestorage_admin/: README.md  package-lock.json  package.json  vite.config.ts
src/timestorage_admin/src/: app.tsx  config-global.ts
src/timestorage_admin/src/_mock/: _data.ts
src/timestorage_admin/src/constants/: equipment-base-structure.constants.ts
src/timestorage_backend/: README.md  auth.mo  filestorage.mo  logic.mo  main.mo  storage.mo  types.mo  utils.mo
src/timestorage_core/: auth.mo  main.mo  service.mo
src/timestorage_core_storage/: main.mo  storage_service.mo  storage_types.mo
src/timestorage_frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  package.json.bak  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/timestorage_frontend/src/: App.jsx  App.tsx  globals.css  main.tsx
src/timestorage_session_manager/: Cargo.toml  README.md
src/timestorage_session_manager/src/: delegation.rs  id_token.rs  lib.rs  state.rs  users.rs  utils.rs
src/timestorage_session_manager/tests/: authenticated.rs  controller_only.rs  delegation.rs
src/timestorage_session_manager_types/: Cargo.toml  README.md
test/: test.mo  test_auth.mo  test_logic.mo  test_main.mo  test_storage.mo  test_utils.mo
(+111 files in other folders)
