[workspace]
members = ["src/timestorage_session_manager", "src/timestorage_session_manager_types"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
candid = "0.10"

serde = "1.0"
serde_bytes = "0.11"

timestorage_session_manager_types = { path = "src/timestorage_session_manager_types" }